--- a/KWAnzeige/KWAnzeige.csproj
+++ b/KWAnzeige/KWAnzeige.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KWAnzeige</RootNamespace>
     <AssemblyName>KWAnzeige</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -34,6 +34,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Calendar.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>KWAnzeige.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Languages, Version=1.0.0.2, Culture=neutral, processorArchitecture=MSIL">
