--- a/src/KWAnzeige/KWAnzeige.csproj
+++ b/src/KWAnzeige/KWAnzeige.csproj
@@ -7,6 +7,7 @@
     <ApplicationIcon>Calendar.ico</ApplicationIcon>
     <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
     <LangVersion>latest</LangVersion>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
